--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,26 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "fabpot/goutte": "^4.0",
+        "lexik/jwt-authentication-bundle": "^2.7",
+        "nelmio/cors-bundle": "^2.0",
+        "symfony/browser-kit": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/http-client": "5.1.*",
+        "symfony/http-foundation": "5.1.*",
+        "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "5.1.*",
+        "symfony/serializer-pack": "^1.0",
+        "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "symfony/maker-bundle": "^1.19"
     },
     "config": {
         "optimize-autoloader": true,
