Event new update

--- a/.env
+++ b/.env
@@ -37,3 +37,7 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=81fbb9485e8a1ce6b96e76a2ef15a6cb
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=gmail+smtp://harrycodeur2020:HarryCodeur2020@default
+###< symfony/mailer ###
