--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,17 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/google-mailer": "5.1.*",
         "symfony/http-client": "5.1.*",
         "symfony/http-foundation": "5.1.*",
+        "symfony/mailer": "5.1.*",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "5.1.*",
         "symfony/serializer-pack": "^1.0",
+        "symfony/twig-bundle": "5.1.*",
         "symfony/validator": "5.1.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/yaml": "5.1.*",
+        "symfonycasts/reset-password-bundle": "^1.1"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
