--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,7 @@ security:
             provider: app_user_provider
             stateless: true
             anonymous: true
+            user_checker: App\Security\UserChecker
             json_login:
                 check_path: /api/login_check
                 success_handler: lexik_jwt_authentication.handler.authentication_success
@@ -29,6 +30,7 @@ security:
             pattern: ^/api
             provider: app_user_provider
             stateless: true
+            user_checker: App\Security\UserChecker
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
