--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
         "fabpot/goutte": "^4.0",
         "lexik/jwt-authentication-bundle": "^2.7",
         "nelmio/cors-bundle": "^2.0",
+        "sensio/framework-extra-bundle": "^5.6",
         "symfony/browser-kit": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
+        "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
